--- a/AtualizacaoBaseDeDados/AtualizacaoBaseDeDados.csproj
+++ b/AtualizacaoBaseDeDados/AtualizacaoBaseDeDados.csproj
@@ -48,18 +48,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Backup.cs" />
     <Compile Include="ComandoSql.cs" />
     <Compile Include="ConFirebird.cs" />
-    <Compile Include="frConfigBase.cs">
+    <Compile Include="frPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frConfigBase.Designer.cs">
-      <DependentUpon>frConfigBase.cs</DependentUpon>
+    <Compile Include="frPrincipal.Designer.cs">
+      <DependentUpon>frPrincipal.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frSobre.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frSobre.Designer.cs">
+      <DependentUpon>frSobre.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="frConfigBase.resx">
-      <DependentUpon>frConfigBase.cs</DependentUpon>
+    <EmbeddedResource Include="frPrincipal.resx">
+      <DependentUpon>frPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frSobre.resx">
+      <DependentUpon>frSobre.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
